Finished Final project and wrote report
woooo
